k8s/05-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-app
  namespace: oficina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oficina-app
  template:
    metadata:
      labels:
        app: oficina-app
        tags.datadoghq.com/env: "production"
        tags.datadoghq.com/service: "oficina-app"
        tags.datadoghq.com/version: "1.0.0"
      annotations:
        admission.datadoghq.com/java-lib.version: "latest"
    spec:
      containers:
        - name: oficina-app
          image: oficina-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /v3/api-docs
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v3/api-docs
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: oficina-app
  namespace: oficina
spec:
  type: NodePort
  selector:
    app: oficina-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
